==> maurizioattanasi/esp32-playground/src/agpio/gpio_output.cpp <==
/** --------------------------------
 * gpio_output.cpp
 * Created on Tue Nov 22 2022
 *
 * Maurizio Attanasi
 *
 * Copyright (c) 2022 ATech
 * --------------------------------
 **/

#include "agpio.h"
#include "esp_log.h"

#define TAG "GpioOutput"

namespace AGPIO
{
    esp_err_t GpioOutput::_init(const gpio_num_t pin, const bool activeLow)
    {
        esp_err_t status{ESP_OK};

        _activeLow = activeLow;
        _pin = pin;

        gpio_config_t cfg;
        cfg.pin_bit_mask = 1ULL << pin;
        cfg.mode = GPIO_MODE_OUTPUT;
        cfg.pull_up_en = GPIO_PULLUP_DISABLE;
        cfg.pull_down_en = GPIO_PULLDOWN_DISABLE;
        cfg.intr_type = GPIO_INTR_DISABLE;

        status |= gpio_config(&cfg);

        return status;
    }

    GpioOutput::GpioOutput(const gpio_num_t pin, const bool activeLow)
    {
        _init(pin, activeLow);
    }
    GpioOutput::GpioOutput(const gpio_num_t pin)
    {
        _init(pin, false);
    }
    GpioOutput::GpioOutput(void)
    {
    }

    esp_err_t GpioOutput::Init(const gpio_num_t pin, const bool activeLow)
    {
        return _init(pin, activeLow);
    }
    esp_err_t GpioOutput::Init(const gpio_num_t pin)
    {
        return _init(pin, false);
    }

    esp_err_t GpioOutput::On(void)
    {
        _level = true;
        return gpio_set_level(_pin, _activeLow ? 0 : 1);
    }
    esp_err_t GpioOutput::Off(void)
    {
        _level = false;
        return gpio_set_level(_pin, _activeLow ? 1 : 0);
    }
    esp_err_t GpioOutput::Toggle(void)
    {
        _level = _level ? 0 : 1;
        return gpio_set_level(_pin, _level ? 1 : 0);
    }
    esp_err_t GpioOutput::SetLevel(int level)
    {
        _level = _activeLow ? !level : level;
        if(_level) ESP_LOGD(TAG, "SetLevel::ON");
        else ESP_LOGD(TAG, "SetLevel::OFF");
        return gpio_set_level(_pin, _level);
    }
}
